Add CORS Config API (#460)
