# router/targeter.go
@@ -4,6 +4,7 @@ import (
 	"github.com/serverless/event-gateway/event"
 	"github.com/serverless/event-gateway/function"
 	"github.com/serverless/event-gateway/internal/pathtree"
+	"github.com/serverless/event-gateway/subscription/cors"
 )
 
 // Targeter is an interface for retrieving cached configuration for driving performance-sensitive routing decisions.
@@ -12,6 +13,7 @@ type Targeter interface {
 	EventType(space string, name event.TypeName) *event.Type
 	AsyncSubscribers(method, path string, eventType event.TypeName) []AsyncSubscriber
 	SyncSubscriber(method, path string, eventType event.TypeName) *SyncSubscriber
+	CORS(method, path string) *cors.CORS
 }
 
 // AsyncSubscriber store info about space and function ID.
